--- a/package.json
+++ b/package.json
@@ -16,7 +16,5 @@
         "lodash": "^4.17.19",
         "resolve-url-loader": "^3.1.0"
     },
-    "dependencies": {
-        "tailwindcss": "^1.8.10"
-    }
+    "dependencies": {}
 }
